Fix center alignment of connection button

--- a/gui/scss/core/_global.scss
+++ b/gui/scss/core/_global.scss
@@ -575,7 +575,7 @@ body {
 .interactive-status-wrapper {
   align-self: left;
   margin-top: auto;
-  padding:0em 0em 0em 1em;
+  padding:0em 0em 0em 16px;
   text-align:left;
   margin-bottom: .70em;
   display: flex;
